unpackaged/main/default/objects/Specification__c/Specification__c.object-meta.xml
<CustomObject>
    <label>Спецификация</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Спецификация</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Спецификации</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>