unpackaged/main/default/objects/Specification__c/fields/CompanyDeliverTo__c.field-meta.xml
<CustomField>
    <fullName>CompanyDeliverTo__c</fullName>
    <label>Грузополучатель</label>
    <length>255</length>
    <type>Text</type>
</CustomField>