unpackaged/main/default/objects/Specification__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Контракт</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Спецификации</relationshipLabel>
    <relationshipName>BlkG</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>