unpackaged/main/default/objects/Specification__c/fields/DeliveryCondition__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCondition__c</fullName>
    <label>Доставка</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>За счет Покупателя. Покупатель оплачивает счет от транспортной компании</fullName>
            </value>
            <value>
                <fullName>Самовывоз в течение 5 дней после уведомления</fullName>
            </value>
            <value>
                <fullName>Поставщик доставляет своими силами. Стоимость доставки входит в стоимость Оборудования</fullName>
            </value>
            <value>
                <fullName>За счет Покупателя. Покупатель оплачивает счет от Тион</fullName>
            </value>
            <value>
                <fullName>Поставщик обязуется доставить своими силами и средствами Оборудование до склада транспортной компании в городе</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>