unpackaged/main/default/objects/Specification__c/fields/DeliveryDuration__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDuration__c</fullName>
    <inlineHelpText>Указывается либо количество дней, либо дата поставки в формате «__»____________20__г.</inlineHelpText>
    <label>Срок поставки</label>
    <length>32</length>
    <type>Text</type>
</CustomField>