unpackaged/main/default/objects/Specification__c/fields/InvoiceReadyInfo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReadyInfo__c</fullName>
    <label>Готовность к отгрузке со склада</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Поставщика</fullName>
                <default>true</default>
                <label>Поставщика</label>
            </value>
            <value>
                <fullName>Производителя</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>