unpackaged/main/default/objects/Specification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Проект</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Спецификации</relationshipLabel>
    <relationshipName>Szmc</relationshipName>
    <type>Lookup</type>
</CustomField>