unpackaged/main/default/objects/Specification__c/fields/Partpayment_days__c.field-meta.xml
<CustomField>
    <fullName>Partpayment_days__c</fullName>
    <label>Срок при готовности оборудования (дней)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>