unpackaged/main/default/objects/Specification__c/fields/PaymentDelayText__c.field-meta.xml
<CustomField>
    <fullName>PaymentDelayText__c</fullName>
    <label>В случае задержки ден. средств в размере</label>
    <length>255</length>
    <type>Text</type>
</CustomField>