unpackaged/main/default/objects/Specification__c/fields/Postpayment_days__c.field-meta.xml
<CustomField>
    <fullName>Postpayment_days__c</fullName>
    <label>Срок оплаты после отгрузки (дней)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>