unpackaged/main/default/objects/Specification__c/fields/Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Prepayment__c</fullName>
    <label>Размер предоплаты (процент)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>