unpackaged/main/default/objects/Specification__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Смета</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>Quote.Opportunity.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Спецификации</relationshipLabel>
    <relationshipName>Quote111</relationshipName>
    <type>Lookup</type>
</CustomField>