unpackaged/main/default/objects/Specification__c/fields/SpecificationDate__c.field-meta.xml
<CustomField>
    <fullName>SpecificationDate__c</fullName>
    <label>Дата создания спецификации</label>
    <type>Date</type>
</CustomField>