unpackaged/main/default/objects/Specification__c/fields/SpecificationNumber__c.field-meta.xml
<CustomField>
    <fullName>SpecificationNumber__c</fullName>
    <label>Номер спецификации</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>