unpackaged/main/default/objects/Specification__c/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник, ответственный за договор</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Спецификации</relationshipLabel>
    <relationshipName>J9mS</relationshipName>
    <type>Lookup</type>
</CustomField>