unpackaged/main/default/objects/Specification__c/validationRules/OppSpec.validationRule-meta.xml
<ValidationRule>
    <fullName>OppSpec</fullName>
    <active>false</active>
    <errorConditionFormula>Contract__r.ProjectName__r.Id !=  Opportunity__r.Id</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Проект не соответствует выбранному договору</errorMessage>
</ValidationRule>