unpackaged/main/default/objects/Specification__c/validationRules/Partpayment_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Partpayment_days</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Partpayment__c &gt; 0 &amp;&amp;   NULLVALUE(Partpayment_days__c, 0) &lt; 1  ,true, false)</errorConditionFormula>
    <errorDisplayField>Partpayment_days__c</errorDisplayField>
    <errorMessage>Укажите срок</errorMessage>
</ValidationRule>