unpackaged/main/default/objects/Specification__c/validationRules/Postpayment_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Postpayment_days</fullName>
    <active>true</active>
    <errorConditionFormula>IF( PostPayment__c &gt; 0 &amp;&amp;   NULLVALUE(Postpayment_days__c, 0) &lt; 1  ,true, false)</errorConditionFormula>
    <errorDisplayField>Postpayment_days__c</errorDisplayField>
    <errorMessage>Укажите срок</errorMessage>
</ValidationRule>