unpackaged/main/default/objects/Specification__c/validationRules/prepayment_days.validationRule-meta.xml
<ValidationRule>
    <fullName>prepayment_days</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Prepayment__c &gt; 0 &amp;&amp;   NULLVALUE(Prepayment_days__c, 0) &lt; 1  ,true, false)</errorConditionFormula>
    <errorDisplayField>Prepayment_days__c</errorDisplayField>
    <errorMessage>Укажите срок</errorMessage>
</ValidationRule>